@@ -1,7 +1,7 @@
 # main Makefile.am for BBDB
 #
 # Copyright (C) 2013 Christian Egli <christian.egli@sbs.ch>
-# Copyright (C) 2013-2016 Roland Winkler <winkler@gnu.org>
+# Copyright (C) 2013-2017 Roland Winkler <winkler@gnu.org>
 #
 # This file is part of the Insidious Big Brother Database (aka BBDB),
 #
