@@ -2,7 +2,7 @@
 
 ;; Copyright (C) 1997,1999 Kevin Davidson
 ;; Copyright (C) 2013 Gijs Hillenius
-;; Copyright (C) 2013-2016 Roland Winkler <winkler@gnu.org>
+;; Copyright (C) 2013-2017 Roland Winkler <winkler@gnu.org>
 
 ;; This file is part of the Insidious Big Brother Database (aka BBDB),
 
