@@ -1,6 +1,6 @@
 ;;; bbdb-site.el.in --- site-specific variables for BBDB -*- lexical-binding: t -*-
 
-;; Copyright (C) 2013-2016 Roland Winkler <winkler@gnu.org>
+;; Copyright (C) 2013-2017 Roland Winkler <winkler@gnu.org>
 
 ;; This file is part of the Insidious Big Brother Database (aka BBDB),
 
